--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,11 @@
     ],
     "require": {
         "php" : "~5.6|~7.0",
-        "illuminate/support": "5.3.* || 5.4.*"
+        "phpseclib/phpseclib": "^2.0",
+        "illuminate/support": "5.4.x|5.5.x|5.6.x"
     },
     "require-dev": {
-        "phpunit/phpunit" : "~4.0||~5.0||~6.0",
-        "squizlabs/php_codesniffer": "^2.3"
+        "phpunit/phpunit" : "~4.0||~5.0||~6.0|^7.0"
     },
     "autoload": {
         "psr-4": {
