--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
         }
     ],
     "require": {
-        "php" : "~5.6|~7.0",
+        "php" : ">=5.4",
         "phpseclib/phpseclib": "^2.0",
-        "illuminate/support": "5.4.x|5.5.x|5.6.x"
+        "illuminate/support": ">=5.4"
     },
     "require-dev": {
         "phpunit/phpunit" : "~4.0||~5.0||~6.0|^7.0"
